<resources>
    <string name="app_name">chuan1-HabitTracker</string>
    <string name="View_habits">View the habits</string>
    <string name="Add_habits">Add new habit</string>
    <string name="Complete_habit">Complete a habit for the day</string>
    <string name="Delete_habit">Delete habits</string>
    <string name="Delete_habit_comp">Delete past habit completions</string>
    <string name="See_habit">See per habit</string>
    <string name="hint0">Enter the date</string>
    <string name="hint1">Enter the habit name</string>
    <string name="save">SAVE</string>
    <string name="back">BACK</string>

</resources>