<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.idreamyc.chuan1_habittracker.MainActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="chuan1-HabitTracker"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:theme="@style/AppTheme" />

    <Button
        android:id="@+id/View_habits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/View_habits"
        android:onClick="view_all_habits"/>

    <Button
        android:id="@+id/Add_habits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add_habits"
        android:onClick="add_new_habit"/>

    <Button
        android:id="@+id/Complete_habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Complete_habit"
        android:onClick="CompleteHabits"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Add: Click &quot;Add New Habit&quot;\n\nDelete and Delete Completions: Click &quot;View The Habits&quot; and Click the habit you want to change\n\n Complete a habit: Click &quot;Complete a habit&quot;"
        android:id="@+id/textView7"
        android:layout_weight="0.25" />

</LinearLayout>
