<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.idreamyc.chuan1_habittracker.AddHabit">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint0"/>

    <EditText
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:layout_marginTop="25dp"
        android:hint="@string/hint1"
        android:layout_below="@+id/editText"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The Day(s) of the Week(that you want to add to)"
        android:id="@+id/textView"
        android:layout_below="@+id/body"
        android:layout_alignEnd="@+id/checkBox7"
        android:layout_marginTop="18dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Monday"
        android:id="@+id/checkBox"
        android:checked="false"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tuesday"
        android:id="@+id/checkBox2"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wednesday"
        android:id="@+id/checkBox3"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Thursday"
        android:id="@+id/checkBox4"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/checkBox3"
        android:layout_alignStart="@+id/checkBox3"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Friday"
        android:id="@+id/checkBox5"
        android:layout_above="@+id/checkBox2"
        android:layout_alignEnd="@+id/body"
        android:layout_marginEnd="59dp"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Saturday"
        android:id="@+id/checkBox6"
        android:checked="false"
        android:layout_above="@+id/checkBox3"
        android:layout_alignStart="@+id/checkBox5" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sunday"
        android:id="@+id/checkBox7"
        android:checked="false"
        android:layout_alignTop="@+id/checkBox3"
        android:layout_alignStart="@+id/checkBox6" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save"
        android:layout_above="@+id/back"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/save"
        android:layout_alignEnd="@+id/save" />

</RelativeLayout>
